--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body class="bg-success">
-    <div class="card d-flex bg-light m-auto w-50 rounded-4" id="carta">
+    <div class="card d-flex m-auto" id="carta">
       <div
-        class="card-header d-flex justify-content-start h-25 bg-light border-0 simbolo"
+        class="card-header d-flex justify-content-start h-25 border-0 simbolo"
         id="figura1"
       >
         <span>Hola</span>
@@ -27,7 +27,7 @@
         <h1>Que haces maquina</h1>
       </div>
       <div
-        class="card-footer d-flex justify-content-end h-25 bg-light border-0"
+        class="card-footer d-flex justify-content-end h-25 border-0"
         id="figura2"
       >
         <span>Chau</span>
@@ -36,11 +36,6 @@
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
   </body>
