--- a/src/index.html
+++ b/src/index.html
@@ -18,21 +18,29 @@
         class="card-header d-flex justify-content-start h-25 border-0 simbolo"
         id="figura1"
       >
-        <span>Hola</span>
+        <span></span>
       </div>
       <div
         class="card-body d-flex justify-content-center align-items-center"
         id="number"
       >
-        <h1>Que haces maquina</h1>
+        <h1></h1>
       </div>
       <div
         class="card-footer d-flex justify-content-end h-25 border-0"
         id="figura2"
       >
-        <span>Chau</span>
+        <span></span>
       </div>
     </div>
+    <label for="ancho" class="text-light">Ancho carta:</label>
+    <input type="number" id="ancho" />
+    <label for="alto" class="text-light">Alto carta:</label>
+    <input type="number" id="alto" />
+
+    <button type="button" class="btn btn-secondary" id="redimensionarCarta">
+      Cambiar tamaño carta
+    </button>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
